Visual Bugfixes
- Fixed "get started" button not centering correctly on several view modes
- Fixed home page jumbotron mask not lining up with image on small screens
- Fixed header buttons wrapping on small computer screens
- Fixed jumbotron text overlapping with background image on small computer screens
- Fixed clear buttons on selection page looking squashed on small screens
- Fixed admin page being affected by dark mode
- Removed unwanted alternate font

--- a/src/css/inputmain.css
+++ b/src/css/inputmain.css
@@ -30,7 +30,7 @@ PHONE SCREEN
   body {
     background-color: #EDEBE5 !important;
     overflow-x: hidden;
-    font-family: 'Hind Madurai', sans-serif;
+    font-family: sans-serif;
   }
 
   body a {
@@ -75,13 +75,16 @@ PHONE SCREEN
   }
 
   p.jumbito-text {
-    margin-top: 1vh;
+    width: 100vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
   }
 
   .mask {
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
+    min-height: 40vh;
   }
 
   .index-text {
@@ -145,6 +148,10 @@ PHONE SCREEN
     accent-color: #0B5A4E;
   }
 
+  input, textarea {
+    background-color: white;
+  }
+
   .add label,
   .add input,
   .delete label,
@@ -190,18 +197,12 @@ PHONE SCREEN
   .clear {
     background-color: #0B5A4E;
     color: white;
-    max-width: 4vw;
+    max-width: 20vw;
     border-radius: 5px;
   }
 
   .clear:hover {
     background-color: #074137;
-  }
-
-  .getStarted {
-    min-width: 40vw;
-    margin-left: 20vw;
-    margin-right: 20vw;
   }
 
   .select-text p.gold {
@@ -301,7 +302,19 @@ PHONE SCREEN
 TABLET SCREEN
 *****/
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+
+  .jumbo-img {
+    background-image: url("../assets/stepping-up-g3.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: #1D1D1D;
+    background-position: center center;
+    background-origin: content-box;
+    min-height: 40vh;
+  }
+
+}
 
 
 /***** 
@@ -309,6 +322,12 @@ COMPUTER SCREEN
 *****/
 
 @media (min-width: 1024px) {
+
+  .headerbutton {
+    min-width: 8vw;
+    max-width: 11vw;
+    font-size: 1.5vh;
+  }
 
   li>a {
     margin-left: 0vw;
@@ -320,15 +339,14 @@ COMPUTER SCREEN
   }
 
   .jumbito {
-    height: 25vh;
-    max-height: 25vh;
+
     background-color: #1D1D1D;
   }
 
   .mask {
     background-color: transparent;
     height: 100%;
-    width: 0%;
+    width: 100%;
   }
 
   .jumbo-img {
@@ -350,30 +368,37 @@ COMPUTER SCREEN
     background-repeat: no-repeat;
     background-position: center right;
     image-resolution: from-image;
+    background-position: 65vw;
     padding-top: 5vh;
     width: 85vw;
     height: 100%;
-    max-height: 30vh;
+    min-height: 20vh;
   }
 
   .mission.jumbito-img {
     background-image: url("../assets/books-g2.svg");
-    background-position: 65vw;
   }
 
   .about.jumbito-img {
     background-image: url("../assets/data-g2.svg");
-    background-position: 65vw;
   }
 
   .admin.jumbito-img {
     background-image: url("../assets/notes.svg");
-    background-position: 65vw;
   }
 
   p.jumbito-text {
-    margin-top: 3vh;
+    width: 46vw;
+    margin-top: 0vh;
+    margin-bottom: 3vh;
     margin-left: 20vw;
+  }
+
+  .clear {
+    background-color: #0B5A4E;
+    color: white;
+    max-width: 4vw;
+    border-radius: 5px;
   }
 
   .add label,
@@ -396,8 +421,7 @@ COMPUTER SCREEN
   }
 
   .getStarted {
-    min-width: 10vw;
-    margin-left: 25vw;
+    margin-right: 20vw;
   }
 
   .index-text {
