--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -2677,7 +2677,7 @@
     height: 100%;
   }
   .getStarted {
-    margin-left: 25vw;
+
   }
   .index-text {
     margin-left: 20vw;
